<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/zip"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/压缩"
        android:textColor="@color/black33"
        android:textSize="14sp" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:background="#FFD1D1D1" />

    <TextView
        android:id="@+id/copy"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/复制"
        android:textColor="@color/black33"
        android:textSize="14sp" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:background="#FFD1D1D1" />

    <TextView
        android:id="@+id/delete"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/删除"
        android:textColor="@color/black33"
        android:textSize="14sp" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:background="#FFD1D1D1" />

    <TextView
        android:id="@+id/cancel"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/取消"
        android:textColor="@color/black33"
        android:textSize="14sp" />
</LinearLayout>
