<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        tools:context=".ui.activity.MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sdcard"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@drawable/round_rect_10_white">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="14dp"
                android:text="@string/手机存储"
                android:textColor="@color/black33"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/space"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="44dp"
                android:textColor="@color/black99"
                android:textSize="11sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView8"
                tools:ignore="SmallSp"
                tools:text="已用130.14GB/共239.61GB" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:max="100"
                android:progress="10"
                android:progressTint="@color/main_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/space"
                app:layout_constraintStart_toStartOf="@+id/textView8" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="14dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/icon_enter"
                android:contentDescription="@string/todo" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/round_rect_10_white">

            <ImageView
                android:id="@+id/download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:contentDescription="@string/todo"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/text"
                app:srcCompat="@drawable/file_type_download" />

            <ImageView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/zip"
                app:layout_constraintEnd_toStartOf="@+id/video"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/zip"
                app:srcCompat="@drawable/file_type_image" />

            <ImageView
                android:id="@+id/video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:contentDescription="@string/todo"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/image"
                app:srcCompat="@drawable/file_type_video" />

            <ImageView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/music"
                app:layout_constraintEnd_toStartOf="@+id/download"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/music"
                app:srcCompat="@drawable/file_type_text" />

            <ImageView
                android:id="@+id/music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="130dp"
                android:contentDescription="@string/todo"
                android:padding="10dp"
                app:layout_constraintEnd_toStartOf="@+id/text"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/file_type_music" />

            <ImageView
                android:id="@+id/zip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/todo"
                android:padding="10dp"
                app:layout_constraintEnd_toStartOf="@+id/image"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/file_type_zip" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/压缩包"
                android:textColor="#ff333333"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/zip"
                app:layout_constraintStart_toStartOf="@+id/zip"
                app:layout_constraintTop_toBottomOf="@+id/zip" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/图片"
                android:textColor="@color/black33"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/image"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toStartOf="@+id/image"
                app:layout_constraintTop_toBottomOf="@+id/image" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/视频"
                android:textColor="@color/black33"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/video"
                app:layout_constraintStart_toStartOf="@+id/video"
                app:layout_constraintTop_toBottomOf="@+id/video" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/下载"
                android:textColor="@color/black33"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/download"
                app:layout_constraintStart_toStartOf="@+id/download"
                app:layout_constraintTop_toBottomOf="@+id/download" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/音频"
                android:textColor="@color/black33"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/music"
                app:layout_constraintStart_toStartOf="@+id/music"
                app:layout_constraintTop_toBottomOf="@+id/music" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/文档"
                android:textColor="@color/black33"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/text"
                app:layout_constraintStart_toStartOf="@+id/text"
                app:layout_constraintTop_toBottomOf="@+id/text" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="16dp"
            android:text="@string/应用文件"
            android:textColor="@color/black33"
            android:textSize="13sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:background="@drawable/round_rect_10_white">

            <ImageView
                android:id="@+id/app_qq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/todo"
                android:padding="10dp"
                app:layout_constraintEnd_toStartOf="@+id/app_vx"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/file_app_qq" />

            <ImageView
                android:id="@+id/app_vx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/app_qq"
                app:layout_constraintEnd_toStartOf="@+id/app_bd"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/app_qq"
                app:srcCompat="@drawable/file_app_vx" />

            <ImageView
                android:id="@+id/app_bd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:contentDescription="@string/todo"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/app_qq"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/app_vx"
                app:srcCompat="@drawable/file_app_bd" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/QQ"
                android:textColor="@color/black33"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/app_qq"
                app:layout_constraintStart_toStartOf="@+id/app_qq"
                app:layout_constraintTop_toBottomOf="@+id/app_qq" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/微信"
                android:textColor="@color/black33"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/app_vx"
                app:layout_constraintStart_toStartOf="@+id/app_vx"
                app:layout_constraintTop_toBottomOf="@+id/app_vx" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/百度网盘"
                android:textColor="@color/black33"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/app_bd"
                app:layout_constraintStart_toStartOf="@+id/app_bd"
                app:layout_constraintTop_toBottomOf="@+id/app_bd" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</layout>